<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="labs.module08309.acw.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_Title_Text"
        android:id="@+id/text_Title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout_mainWrapper"
        android:orientation="horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Play_text"
        android:id="@+id/button_Play"
        android:onClick="playButtonOnClick"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/button_Settings"
        android:layout_alignEnd="@+id/button_Settings" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Settings_Text"
        android:id="@+id/button_Settings"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="settingsButtonOnClick"
        android:layout_below="@id/button_Play"

        />
</RelativeLayout>
