<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/text_listviewDownloadAdapter_label_Title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_listviewAdapter_label_Rows"
        android:id="@+id/text_listviewDownloadAdapter_label_Rows"
        android:layout_below="@+id/text_listviewDownloadAdapter_label_Title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/text_listviewDownloadAdapter_Rows"
        android:layout_alignTop="@+id/text_listviewDownloadAdapter_label_Rows"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_listviewAdapter_label_Columns"
        android:id="@+id/text_listviewDownloadAdapter_label_Columns"
        android:layout_below="@+id/text_listviewDownloadAdapter_label_Rows"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/text_listviewDownloadAdapter_Columns"
        android:layout_alignTop="@+id/text_listviewDownloadAdapter_label_Columns"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_listviewAdapter_label_Score"
        android:id="@+id/text_listviewAdapter_label_Score"
        android:layout_below="@+id/text_listviewDownloadAdapter_label_Columns"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/text_listviewAdapter_Score"
        android:layout_alignTop="@+id/text_listviewAdapter_label_Score"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/text_listviewAdapter_label_Time"
    android:id="@+id/text_listviewAdapter_label_Time"
    android:layout_below="@+id/text_listviewAdapter_label_Score"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/text_listviewAdapter_Time"
        android:layout_alignTop="@+id/text_listviewAdapter_label_Time"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox_listviewAdapter_Completed"
        android:id="@+id/checkBox_listviewAdapter_Completed"
        android:layout_below="@+id/text_listviewAdapter_label_Time"
        android:layout_alignLeft="@+id/text_listviewDownloadAdapter_label_Title"
        android:layout_alignStart="@+id/text_listviewDownloadAdapter_label_Title"
        android:layout_marginTop="20dp"
        android:checked="false"
        android:clickable="false"
         />

</RelativeLayout>